2009-11-25  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by David Kilzer.

        run-webkit-tests doesn't accept directories/files with --skipped=only parameter
        https://bugs.webkit.org/show_bug.cgi?id=31799

        * Scripts/run-webkit-tests: Fixed.

2009-11-25  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Eric Seidel.

        Change run_command to give back stderr by default
        https://bugs.webkit.org/show_bug.cgi?id=31734

        Change run_command to give back stderr by default.
        Set run_commands's 'svn-create-patch' calling to put only the stdout into the patches.
        Change the related unittest call.

        * Scripts/modules/scm.py:
        * Scripts/modules/scm_unittest.py:

2009-11-25  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Centralize required argument parsing in Command
        https://bugs.webkit.org/show_bug.cgi?id=31872

        * Scripts/modules/commands/download.py: remove custom required arg message.
        * Scripts/modules/commands/upload.py: ditto.
        * Scripts/modules/multicommandtool.py:
         - Add _parse_required_arguments.
         - Pass program name off to OptionParser.
         - Add name() for access to tool name.
         - Add check_arguments_and_execute and make it return a return code.
         - Replace a couple uses of + with %.
        * Scripts/modules/multicommandtool_unittest.py: test _parse_required_arguments

2009-11-25  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Abstract out capturing stdout/stderr into a new OutputCapture class for re-use among the various unit tests.
        https://bugs.webkit.org/show_bug.cgi?id=31870

        * Scripts/modules/commands/queries_unittest.py: Use the new class.
        * Scripts/modules/multicommandtool_unittest.py: Ditto.
        * Scripts/modules/outputcapture.py: Added.

2009-11-24  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Eric Seidel.
